fix spacing issue on course tiles

--- a/wp-content/themes/coincademy_reborn/scss/components/tile-course.scss
+++ b/wp-content/themes/coincademy_reborn/scss/components/tile-course.scss
@@ -53,7 +53,6 @@
 .course-title {
     font-weight: 600;
     color: #404852;
-    margin-bottom: 20px;
     padding-right: 30px;
 }
 
